# nutdetector

./: .gitignore  CMakeLists.txt  README.md
docs/: annotated.html  classes.html  dir_645c1847ff7cd97e9f0b9cd5f7d0b402.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_b0856f6b0d80ccb263b2f415c91f9e17.html  dir_cbd7f246bdf7dc0a50281a272327e6ed.html  doxygen_crawl.html  files.html  functions.html  functions_func.html  functions_vars.html  globals.html  globals_defs.html  globals_enum.html  globals_eval.html  hierarchy.html  index.html  menudata.js  namespacemembers.html  namespacemembers_func.html  namespacemembers_type.html  namespaces.html
docs/d1/d00/: Kernel_8cu.html
docs/d3/d00/: namespacePreprocessing.html  structModel_1_1DumpDistanceCalculator-members.html
docs/d4/d00/: Preprocessor_8cpp.html  structModel_1_1CovarianceDistanceCalculator.html  structModel_1_1MeanDistanceCalculater.html
docs/d5/d00/: classDetector.html  namespaceModel.html
docs/d6/d00/: structModel_1_1CovarianceDistanceCalculator-members.html
docs/d9/d00/: classDetector-members.html
docs/db/d00/: structModel_1_1MeanDistanceCalculater-members.html
docs/dc/d00/: Detector_8h.html  Detector_8h_source.html  structModel_1_1DumpDistanceCalculator.html
docs/dd/d00/: Kernel_8cuh.html  Model_8cpp.html
docs/df/d00/: Detector_8cpp.html
docs/search/: all_1.js  all_10.js  all_11.js  all_12.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_a.js  all_b.js  all_c.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  defines_0.js  defines_1.js  defines_2.js  defines_3.js  defines_4.js  enums_0.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  files_0.js  files_1.js  files_2.js  files_3.js  functions_0.js  functions_2.js  functions_3.js  functions_4.js  functions_6.js  functions_8.js  functions_9.js  functions_a.js  (+13 more)
model/: model.json
src/: cudatest.cu  main.cpp  test.cpp
src/common/: Image.cpp  Image.cu  Matrix.cpp  Tensor.cu  Transferable.cu  common.cpp
src/include/: Detector.h  Extractor.cuh  FeatureExtractor.cuh  Image.cuh  Image.h  Kernel.cuh  KernelCommons.cuh  KernelFunctions.cuh  Matrix.h  Model.h  Preprocessor.h  Tensor.cuh  Transferable.cuh  common.h  main.h  stb_image.h  stb_image_impl.c  stb_image_write.h  stb_image_write_impl.c
src/kernel/: Kernel.cu  KernelFunctions.cu
src/pipeline/: Detector.cpp  Extractor.cu  FeatureExtractor.cu  Model.cpp  Preprocessor.cpp
